# vanity

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config.yaml  deny.toml  vanity.yaml
.github/: dependabot.yml
.github/workflows/: build.yml  chart.yml  image.yml  pipeline.yml  update-deps.yaml
chart/: Chart.yaml
chart/templates/: deployment.yaml
deploy/charts/vanity/: Chart.yaml  README.md  README.md.gotmpl  values.yaml
deploy/charts/vanity/templates/: NOTES.txt  configmap.yaml  deployment.yaml  ingress.yaml
src/: lib.rs  main.rs
