[package]
name = "vanity"
version = "0.3.11"
authors = ["Boban Acimovic <boban.acimovic@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
axum = "0.5.4"
config = { version = "0.13.1", default-features = false, features = ["yaml"] }
serde = { version = "1.0.136", features = ["derive"] }
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info"] }
slog-json = "2.6.1"
tokio = { version = "1.18.0", features = ["full"] }
