[package]
name = "vanity"
version = "0.3.12"
authors = ["Boban Acimovic <boban.acimovic@gmail.com>"]
license = "BSD-2-Clause-Patent"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
axum = "0.5.6"
config = { version = "0.13.1", default-features = false, features = ["yaml"] }
hyper = "0.14.19"
maud = "0.23.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info"] }
slog-json = "2.6.1"
thiserror = "1.0.31"
tokio = { version = "1.18.2", features = ["full"] }
