[package]
name = "vanity"
version = "0.5.4"
authors = ["Boban Acimovic <boban.acimovic@gmail.com>"]
license = "BSD-2-Clause-Patent"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = { version = "0.5", features = ["http2"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
hyper = "0.14"
maud = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_info"] }
slog-json = "2.6"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
